# linkedin-web-agent

./: .env.example  .gitignore  .vercelignore  README.md  pyproject.toml  vercel.json
.github/workflows/: ci.yml
api/: index.py
evals/: dataset.py  run_eval.py
linkedin_ai_agent/evals/: evaluators.py
linkedin_ai_agent/src/linkedin_ai_agent/: browser_tool.py  grounding.py  models.py
linkedin_ai_agent/tests/: test_grounding.py
src/linkedin_ai_agent/: agents.py  browser_tool.py  main.py  pipeline.py  server.py
src/linkedin_ai_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_models.py  test_server.py
web/: README.md
web/app/: layout.tsx  page.tsx
web/app/components/: ErrorPanel.tsx  HealthBanner.tsx  ProgressLog.tsx  ReportView.tsx  StatusBadge.tsx  TopicsForm.tsx
web/lib/: api.ts  topics.ts  types.ts
