[project]
name = "linkedin-ai-agent"
version = "0.1.0"
description = "A deepagents orchestrator that scans LinkedIn for AI news via Browser Use and produces a structured, evaluated digest."
requires-python = ">=3.11"
dependencies = [
    "browser-use>=0.7.9",
    "deepagents>=0.6.10",
    "langchain-openai>=0.3.0",
    "langsmith>=0.2.0",
    "python-dotenv>=1.0.1",
    "tenacity>=9.0.0",
    "pydantic>=2.7",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6"]

[project.scripts]
linkedin-digest = "linkedin_ai_agent.main:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.vercel]
entrypoint = "src/linkedin_ai_agent/main.py"
